<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="32dp">


            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/register_image"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/registration_cat"
                app:civ_shadow_radius="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/register_edit_button"
                android:src="@drawable/ic_mode_edit_black_24dp"
                app:layout_constraintEnd_toEndOf="@+id/register_image"
                app:layout_constraintTop_toTopOf="@+id/register_image" />

            <TextView
                android:id="@+id/register_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:padding="@dimen/material_padding_dimension"
                android:text="@string/register_register_your_pet"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_image" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.35" />

            <TextView
                android:id="@+id/register_name_title"
                style="@style/register_title"
                android:text="@string/register_name_title"
                app:layout_constraintBottom_toBottomOf="@+id/register_name_entry_layout"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/register_name_entry_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_name_entry_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/register_name_hint"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/register_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_name_entry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/register_type_title"
                style="@style/register_title"
                android:text="@string/register_type_title"
                app:layout_constraintBottom_toBottomOf="@+id/register_type_entry"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/register_type_entry" />

            <Spinner
                android:id="@+id/register_type_entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:entries="@array/register_type_array"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/register_name_entry_layout" />

            <TextView
                android:id="@+id/register_breed_title"
                style="@style/register_title"
                android:layout_marginEnd="8dp"
                android:text="@string/register_breed_title"
                app:layout_constraintBottom_toBottomOf="@+id/register_breed_entry_layout"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintTop_toTopOf="@+id/register_breed_entry_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_breed_entry_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"

                android:hint="@string/register_breed_hint"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/register_type_entry">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_breed_entry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/register_birthday_title"
                style="@style/register_title"
                android:text="@string/register_birthday_title"
                app:layout_constraintBottom_toBottomOf="@+id/register_birthday_entry"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/register_birthday_entry" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_birthday_entry"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                android:text="@string/register_birthday"
                app:cornerRadius="32dp"
                app:icon="@drawable/ic_date_range_white_24dp"
                app:layout_constraintStart_toEndOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/register_breed_entry_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/register_register_pet_button"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_note_add_white_24dp"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>


